--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,11 @@
   "require": {
     "php": "^8.0",
     "laravel/framework": "^8.12",
+    "barryvdh/laravel-ide-helper": "^2.9",
     "darkaonline/l5-swagger": "^8.0",
+    "ejarnutowski/laravel-api-key": "dev-master",
     "orkhanahmadov/laravel-accept-language-middleware": "^1.2",
     "shalvah/laravel-jsend": "^2.2"
-  },
-  "require-dev": {
-    "barryvdh/laravel-ide-helper": "^2.9"
   },
   "autoload": {
     "psr-4": {
