feat: adding redis client facade
- set redis config in cis-base.php
- register RedisClient facade

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,10 @@
     "laravel": {
       "providers": [
         "Experteam\\CisBase\\CisBaseServiceProvider"
-      ]
+      ],
+      "aliases": {
+        "RedisClient": "Experteam\\CisBase\\Facades\\RedisClientFacade"
+      }
     }
   },
   "minimum-stability": "dev",
