--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   ],
   "require": {
     "php": "^8.0",
+    "ext-redis": "*",
     "laravel/framework": "^8.12",
     "barryvdh/laravel-ide-helper": "^2.9",
     "darkaonline/l5-swagger": "^8.0",
