--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "barryvdh/laravel-ide-helper": "^2.9",
     "darkaonline/l5-swagger": "^8.0",
     "ejarnutowski/laravel-api-key": "dev-master",
+    "neronmoon/scriptsdev": "^0.1.9",
     "orkhanahmadov/laravel-accept-language-middleware": "^1.2",
     "shalvah/laravel-jsend": "^2.2"
   },
@@ -46,6 +47,13 @@
       "aliases": {
         "RedisClient": "Experteam\\CisBase\\Facades\\RedisClientFacade"
       }
+    },
+    "scripts-dev": {
+      "post-autoload-dump": [
+        "@php artisan ide-helper:generate",
+        "@php artisan ide-helper:meta",
+        "@php artisan ide-helper:models -n"
+      ]
     }
   },
   "minimum-stability": "dev",
