feat(elk): integration with elk stack for logs
- adding facades and formatter for elk logs

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "Experteam\\CisBase\\CisBaseServiceProvider"
       ],
       "aliases": {
-        "RedisClient": "Experteam\\CisBase\\Facades\\RedisClientFacade"
+        "RedisClient": "Experteam\\CisBase\\Facades\\RedisClientFacade",
+        "ESLog": "Experteam\\CisBase\\Facades\\ESLogFacade"
       }
     },
     "scripts-dev": {
